Fixed some alignment properties

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     gap: 1.5rem;
     flex:1;
   }
@@ -101,10 +101,11 @@
   .right .free {
     background-color: var(--Blue);
     color: white;
-    padding: 1rem 5rem;
+    padding: 1rem;
     border-radius: 0.5rem;
     box-shadow: var(--box-shadow);
     flex:1;
+    text-align: center;
   }
 
   .free span {
@@ -145,6 +146,7 @@
     font-size: 0.8rem;
     font-weight: var(--weight600);
     flex:1;
+    text-align: center;
   }
 
   form .agreement span{
